...
            android:layout_marginBottom="17dp"
            android:text="line_2"
            android:textAlignment="viewStart"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_send_coin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_alignTop="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
...
